--- a/lab1/css/main.css
+++ b/lab1/css/main.css
@@ -1,97 +1,88 @@
-* {
-  box-sizing: border-box;
-}
-body {
+
+.row{
+  border: 1px solid black;
+  width: 100%;
   margin: 0;
   padding: 0;
-  text-align: center;
-  
 }
-header{
-  display: flex;
-  width: 100%;
+
+.header{
   height: 100px;
-}
-
-footer{
-  display: flex;
-  width: 100%;
-  height: 50px;
-}
-main {
-  border: 1px solid black;
-  width: 100%;
-  height: 300px;
-}
-
-.menu,
-.title{
-  width: 50%;
-  height: 100px;
-} 
-
-
-.section,
-.column {
-  border: 1px solid black;
-  width: 50%;
-} 
-
-
-.menu{
-  background: rgb(223, 212, 212);
   margin: 0;
+  padding: 0;
 }
 
-.title{
-  background: rgb(242, 235, 235);
+.main_block{
+  height: 400px;
 }
 
-.main{
-  background: rgb(242, 242, 242);
-  width: 100%;
-  height: 560px;
-}
-
-.section{
-  background: rgb(228, 228, 228);
-}
-
-.column{
-  background: rgb(228, 228, 228);
-}
-
-.menu_element:hover{
-  background: red;
-}
-
-.menu_element a {
-  display: block;
-  height: 100%; 
-  text-decoration: none; 
-}
-
-.menu_element{
+.row_menu{
   border: 1px solid black;
+  width: 100%;
   margin: 0;
+  padding: 0;
   text-align: center;
   text-decoration: none;
   height: 25px;
 }
 
-.menu_block{
-  margin: 0;
+.row_menu:hover{
+  background: red;
 }
 
-.title_text{
+.row_menu a {
+  display: block;
+  height: 100%; 
+  text-decoration: none; 
+}
+
+
+.menu{
   width: 100%;
   height: 100%;
-  text-align: center;
   margin: 0;
+  padding: 0;
+  background: rgb(223, 212, 212);
 }
 
-.text_main{
-    width: 100%;
+.col-sm-6{
+  border: 1px solid black;
+  height: 100px;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.col-sm-4{
+  border: 1px solid black;
   height: 100%;
-  text-align: left;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.logo{
+  width: 60%;
+  height: 100%;
+  margin: 0 auto; 
+  display: block;
+}
+
+.clother{
+  width: 100%;
+  height: 100%;
+  margin: 0 auto; 
+  display: block;
+}
+
+.picture_title{
+  width: 100%;
+  text-align: center;
+  text-decoration: none;
+}
+
+.footer{
+  height: 50px;
+  background: rgb(228, 228, 228);
+  text-align: center;
 }
